<resources>
    <!--  Strings for my profile layout  -->
    <string name="tv_my_profile_settings">Settings</string>
    <string name="iv_my_profile_person">image person</string>
    <string name="bt_my_profile_edit_profile">Edit profile</string>
    <string name="bt_my_profile_view_my_contacts">View my contacts</string>

    <!--  Strings for SingUp Activity  -->
    <string name="tv_sing_up_title">Let\'s get acquainted</string>
    <string name="tv_sing_up_fill_out_profile">Fill out the profile and go to the application!</string>
    <string name="et_sing_up_e_mail">E-mail</string>
    <string name="et_sing_up_password">Password</string>
    <string name="cb_sing_up_remember_me">Remember me</string>
    <string name="tv_sing_up_or">or</string>
    <string name="bt_sing_up_register">register</string>
    <string name="tv_sing_up_message_terms_and_conditions">By clicking Register you agree to our\n Terms and Conditions</string>
    <string name="tv_sing_up_message_already_have_an_account">Already have an account?</string>
    <string name="tv_sing_up_sing_in">Sing in</string>
    <string name="sing_up_google_text_in_button" translatable="false">google</string>

    <!--  Strings for my_contacts layout  -->
    <string name="tv_my_contacts_contacts">Contacts</string>
    <string name="my_contacts_add_contacts">Add contacts</string>
    <string name="bt_my_contacts_look_for_contact">look for contact</string>

    <!--  Strings for add_contacts_dialog layout  -->
    <string name="bt_add_contacts_dialog_save">save</string>
    <string name="tv_add_contact">Add contact</string>

    <!--  Strings for detail view layout  -->
    <string name="tv_detail_view_profile">Profile</string>
    <string name="bt_detail_view_message">message</string>

    <!--  Strings for my profile and detail view layout  -->
    <string name="iv_link_to_facebook">icon link to facebook page</string>
    <string name="iv_link_to_linkedin">icon link to linkedin page</string>
    <string name="iv_link_to_instagram">icon link to instagram page</string>

    <!--  Strings for item_user layout  -->
    <string name="iv_user_icon">user icon</string>

    <!--  Strings for my_contacts layout and add_contacts_dialog layouts  -->
    <string name="bt_go_back">go back</string>

    <!--  Strings for my_profile, add_contacts_dialog, detail view and item_user layouts  -->
    <string name="tv_user_name">Username</string>
    <string name="tv_profession">Profession</string>
    <string name="tv_address">Address</string>

    <!--  Strings for item_user layouts  -->
    <string name="iv_item_user_delete_ic">delete icon</string>

    <!--  Strings for email and password validation in sing_up  -->
    <string name="error_empty_string">Required Field!</string>
    <string name="error_invalid_email">Invalid email!</string>
    <string name="error_at_least_one_digit">Required at least 1 digit</string>
    <string name="error_upper_and_lower_case">Password must contain upper and
        lower case letters</string>
    <string name="error_too_short_password">Password can\'t be less than 8</string>
    <string name="contact_was_deleted">Contact was deleted</string>
    <string name="contacts_was_deleted">contacts was deleted</string>
    <string name="undo">UNDO</string>

    <!--  tabs for view pager fragment  -->
    <string name="tab1">My profile</string>
    <string name="tab2">Contacts</string>
    <string name="button_to_delete_selected_items">button to delete selected items</string>

</resources>