<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_detail_view_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_detail_view_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/dark_blue"
        app:layout_constraintBottom_toBottomOf="@id/guideline_detail_view_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </View>

    <TextView
        android:id="@+id/setting_detail_view_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audio_wide"
        android:text="@string/tv_detail_view_profile"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_detail_view_profile"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_detail_view_top" />

    <ImageView
        android:id="@+id/iv_detail_view_arrow_back"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:clickable="true"
        android:contentDescription="@string/bt_go_back"
        android:focusable="true"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_detail_view_top"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/iv_detail_view_icon_user"
        android:layout_width="90dp"
        android:layout_height="80dp"
        android:contentDescription="@string/iv_user_icon"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toTopOf="@id/guideline_detail_view_iv"
        app:layout_constraintEnd_toEndOf="@id/tv_detail_view_user_name"
        app:layout_constraintStart_toStartOf="@+id/tv_detail_view_user_name"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_detail_view_iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_detail_view_text_views"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.46" />

    <TextView
        android:id="@+id/tv_detail_view_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audio_wide"
        android:text="@string/tv_user_name"
        android:textColor="@color/white"
        android:textSize="@dimen/tv_user_name"
        app:layout_constraintBottom_toTopOf="@id/tv_detail_view_career"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_detail_view_iv"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tv_detail_view_career"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audio_wide"
        android:text="@string/tv_profession"
        android:textColor="@color/semi_transparent_blue_gray"
        android:textSize="@dimen/tv_detail_view_career"
        app:layout_constraintBottom_toTopOf="@id/tv_detail_view_address"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_view_user_name"

        />

    <TextView
        android:id="@+id/tv_detail_view_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/audio_wide"
        android:text="@string/tv_address"
        android:textColor="@color/semi_transparent_blue_gray"
        android:textSize="@dimen/tv_detail_view_address"
        app:layout_constraintBottom_toTopOf="@id/guideline_detail_view_text_views"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_detail_view_career" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_detail_view_social_media"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.64" />

    <ImageView
        android:id="@+id/detail_view_facebook_icon_iv"
        style="@style/facebook_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_link_to_facebook"
        app:layout_constraintEnd_toStartOf="@id/detail_view_linkedin_icon_iv"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_detail_view_social_media" />

    <ImageView
        android:id="@+id/detail_view_linkedin_icon_iv"
        style="@style/linkedin_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_link_to_linkedin"
        app:layout_constraintEnd_toStartOf="@id/detail_view_instagram_icon_iv"
        app:layout_constraintStart_toEndOf="@id/detail_view_facebook_icon_iv"
        app:layout_constraintTop_toBottomOf="@id/guideline_detail_view_social_media" />

    <ImageView
        android:id="@+id/detail_view_instagram_icon_iv"
        style="@style/instagram_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_link_to_instagram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/detail_view_linkedin_icon_iv"
        app:layout_constraintTop_toBottomOf="@id/guideline_detail_view_social_media" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_detail_view_button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_detail_view_my_contacts"
        style="@style/view_detail_view_bt_background"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_detail_view_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/guideline_vertical_end"
        app:layout_constraintStart_toStartOf="@id/guideline_vertical_start"
        app:layout_constraintTop_toBottomOf="@id/guideline_detail_view_button_first" />


</androidx.constraintlayout.widget.ConstraintLayout>