<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_user_checkbox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/item_user_checkbox_background">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_item_user_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_item_user_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.01" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_item_user_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.99" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_item_user_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />


    <androidx.appcompat.widget.AppCompatCheckBox
        android:id="@+id/cb_item_user"
        android:layout_width="@dimen/large_size"
        android:layout_height="wrap_content"
        android:button="@drawable/rounded_checkbox_selector"
        android:checked="false"
        android:layout_marginStart="@dimen/micro_size"
        app:layout_constraintBottom_toBottomOf="@id/guideline_item_user_bottom"
        app:layout_constraintStart_toStartOf="@id/guideline_item_user_start"
        app:layout_constraintTop_toTopOf="@id/guideline_item_user_top"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/iv_item_user_user_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/iv_user_icon"
        android:src="@drawable/ic_person"
        app:layout_constraintBottom_toBottomOf="@id/guideline_item_user_bottom"
        app:layout_constraintStart_toEndOf="@id/cb_item_user"
        app:layout_constraintTop_toTopOf="@id/guideline_item_user_top" />

    <TextView
        android:id="@+id/tv_item_user_user_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:paddingStart="@dimen/medium_size"
        android:paddingEnd="@dimen/medium_size"
        android:text="@string/tv_user_name"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_text"
        app:layout_constraintBottom_toTopOf="@id/tv_item_user_profession"
        app:layout_constraintEnd_toEndOf="@id/guideline_item_user_end"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@id/iv_item_user_user_icon"
        app:layout_constraintTop_toTopOf="@id/guideline_item_user_top"
        app:layout_constraintVertical_chainStyle="spread" />

    <TextView
        android:id="@+id/tv_item_user_profession"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:lines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:text="@string/tv_profession"
        android:textColor="@color/grey_item"
        android:textSize="@dimen/small_text"
        app:layout_constraintBottom_toBottomOf="@id/guideline_item_user_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_item_user_end"
        app:layout_constraintStart_toEndOf="@id/iv_item_user_user_icon"
        app:layout_constraintTop_toBottomOf="@id/tv_item_user_user_name" />


</androidx.constraintlayout.widget.ConstraintLayout>